# plugin-nhncloud-inven-collector

./: .gitignore  Dockerfile  OWNERS  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-pull-request.yml  dispatch_release.yaml  push_build_dev.yaml
docs/en/: GUIDE.md  README.md
docs/ko/: GUIDE.md  README.md
managed_resource/plugin/: collector.yaml
managed_resource/provider/: example.yaml  nhn_cloud.yaml  nhncloud.yaml
managed_resource/schema/: example_secret_type0.yaml  example_secret_type1.yaml  example_service_account.yaml  nhn_cloud_access_key.yaml  nhn_cloud_app_key.yaml  nhn_cloud_service_account.yaml  nhncloud_access_key.yaml  nhncloud_app_key.yaml  nhncloud_certificate_manager_app_key.yaml  nhncloud_object_storage_access_key.yaml  nhncloud_service_account.yaml
src/plugin/: main.py
src/plugin/conf/: cloud_service_conf.py
src/plugin/connector/: base.py  resource_connector.py
src/plugin/connector/api_gateway/: api_key_connector.py  service_connector.py  usage_plan_connector.py
src/plugin/connector/block_storage/: block_storage_connector.py  block_storage_snapshots_connector.py  block_storage_type_connector.py
src/plugin/connector/certificate_manager/: certificate_connector.py
src/plugin/connector/dns_plus/: dns_zone_connector.py  gslb_connector.py  health_check_connector.py  pool_connector.py
src/plugin/connector/email/: category_connector.py  (+2 more)
src/plugin/manager/: __init__.py  base.py  resource_manager.py
test/: collect.yml  init.yml  local.yml  provider.yml  repository.yml  schema.yml  verify.yml
(+195 files in other folders)
